src/client/Client.h
@@ -906,6 +906,7 @@ protected:
   void kick_requests(MetaSession *session);
   void kick_requests_closed(MetaSession *session);
   void handle_client_request_forward(const MConstRef<MClientRequestForward>& reply);
+  void _handle_client_reply(const MConstRef<MClientReply>& reply);
   void handle_client_reply(const MConstRef<MClientReply>& reply);
   bool is_dir_operation(MetaRequest *request);
 
@@ -1437,6 +1438,9 @@ private:
   int acl_type = NO_ACL;
 
   epoch_t cap_epoch_barrier = 0;
+
+  set<cref_t<MClientReply>> inject_directory_dentries_race_queue;
+  bool inject_directory_dentries_race = false;
 
   // mds sessions
   map<mds_rank_t, MetaSession> mds_sessions;  // mds -> push seq
